Add linux maven target